[package]
name = "coup"
version = "0.1.0"
authors = ["elsid <elsid.mail@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.8.5"
itertools = "0.10.5"
clap = { version = "4.0.22", features = ["derive"] }
serde = { version = "1.0.147", features = ["derive", "rc"] }
serde_json = "1.0.87"
scan_fmt = "0.2.6"
